# Practica4-1-Michael-Lata

./: .gitignore  README.md
Parte1A/: benchmark.py  resume_train.py  train.py  webcam_live.py
Parte1A/runs/traffic_objects_v1/: args.yaml  results.csv
Parte1B/: benchmark_live.py  benchmark_offline.py
Parte1C/: CMakeLists.txt  main.cpp
informe/: main.tex
